--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
+DB_HOST=mysql.railway.internal
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=laravel
+DB_PASSWORD=rbtyqNvZmwFBPBJBMzC0MZSA92E1grK
+DB_NAME=railway
+DB_PORT=3366
 DB_CONNECTION_LIMIT=10
