--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=mysql.railway.internal
+DB_HOST=junction.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=rbtyqNvZmwFBPBJBMzC0MZSA92E1grK
+DB_PASSWORD=rbRyqNWZmwFBPBJBWzCGwISASOzElgrK
 DB_NAME=railway
-DB_PORT=3366
+DB_PORT=33138
 DB_CONNECTION_LIMIT=10
