--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DATABASE_URL=mysql://root:rbRyqNWZmwFBPBJBWzCGwISASOzElgrK@junction.proxy.rlwy.net:33138/railway
 DB_HOST=junction.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=rbRyqNWZmwFBPBJBWzCGwISASOzElgrK
